--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -22,11 +22,32 @@
     \endgroup%
     \texttt{#1}%
 }
+% \newcommand{\scm}[3]{%
+%   % \vspace{2.1ex}
+%   \noindent
+%   \def\tmpp{#1}%
+%   \def\tmp{#3}\fbox{%
+%   \begin{minipage}{\linewidth}\vspace{0.5ex}
+%   \begin{minipage}[t]{0.17\linewidth}
+%     \texttt{\expandafter\foo\meaning\tmpp}
+%   \end{minipage}
+%   \begin{minipage}[t]{0.37\linewidth}%
+%     #2
+%   \end{minipage}
+%   \begin{minipage}[t]{0.24\linewidth}%
+%     \texttt{\expandafter\foo\meaning\tmp}
+%   \end{minipage}
+%   \begin{minipage}[t]{0.20\linewidth}
+%     #3
+%   \end{minipage}\vspace{0.5ex}
+%   \end{minipage}}\newline\noindent
+% }
+
 \newcommand{\scm}[3]{%
   % \vspace{2.1ex}
   \noindent
   \def\tmpp{#1}%
-  \def\tmp{#3}\fbox{%
+  \def\tmp{#3}%
   \begin{minipage}{\linewidth}\vspace{0.5ex}
   \begin{minipage}[t]{0.17\linewidth}
     \texttt{\expandafter\foo\meaning\tmpp}
@@ -40,8 +61,9 @@
   \begin{minipage}[t]{0.20\linewidth}
     #3
   \end{minipage}\vspace{0.5ex}
-  \end{minipage}}\newline\noindent
+  \end{minipage}\newline\noindent
 }
+
 \makeatother
 \def\foo#1>{}
 \makeatletter
@@ -221,13 +243,40 @@ for alphabets in which this is possible.
 
 \subsection{Braces}
 
-\scm{\rbr}{Round braces}{$\rbr{\VA}$}
-\scm{\sbr}{Square brackets}{$\sbr{\VA}$}
-\scm{\cbr}{Curly braces}{$\cbr{\VA}$}
-\scm{\abr}{Angles}{$\abr{\VA}$}
-\scm{\dbr}{Double square braces}{$\dbr{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
+% \scm{\rbr}{Round braces}{$\rbr{\VA}$}
+\scm{\rbr}{Round braces - adaptive}{$\rbr{\VA}$}
+\scm{\rbrn}{Round braces - normal sized}{$\rbrn{\VA}$}
+\scm{\rbrbig}{Round braces - big}{$\rbrbig{\VA}$}
+\scm{\rbrBig}{Round braces - Big}{$\rbrBig{\VA}$}
+\scm{\rbrbigg}{Round braces - bigg}{$\rbrbigg{\VA}$}
+\scm{\rbrBigg}{Round braces - Bigg}{$\rbrBigg{\VA}$}
+%
+\scm{\sbr}{Square brackets - adaptive}{$\sbr{\VA}$}
+\scm{\sbrn}{Square brackets - normal sized}{$\sbrn{\VA}$}
+\scm{\sbrbig}{Square brackets - big}{$\sbrbig{\VA}$}
+\scm{\sbrBig}{Square brackets - Big}{$\sbrBig{\VA}$}
+\scm{\sbrbigg}{Square brackets - bigg}{$\sbrbigg{\VA}$}
+\scm{\sbrBigg}{Square brackets - Bigg}{$\sbrBigg{\VA}$}
+%
+\scm{\cbr}{Curly braces - adaptive}{$\cbr{\VA}$}
+\scm{\cbrn}{Curly braces - normal sized}{$\cbrn{\VA}$}
+\scm{\cbrbig}{Curly braces - big}{$\cbrbig{\VA}$}
+\scm{\cbrBig}{Curly braces - Big}{$\cbrBig{\VA}$}
+\scm{\cbrbigg}{Curly braces - bigg}{$\cbrbigg{\VA}$}
+\scm{\cbrBigg}{Curly braces - Bigg}{$\cbrBigg{\VA}$}
+%
+% \scm{\abr}{Angles}{$\abr{\VA}$}
+\scm{\abr}{Angles - adaptive}{$\abr{\VA}$}
+\scm{\abrn}{Angles - normal sized}{$\abrn{\VA}$}
+\scm{\abrbig}{Angles - big}{$\abrbig{\VA}$}
+\scm{\abrBig}{Angles - Big}{$\abrBig{\VA}$}
+\scm{\abrbigg}{Angles - bigg}{$\abrbigg{\VA}$}
+\scm{\abrBigg}{Angles - Bigg}{$\abrBigg{\VA}$}
+
+\scm{\dbr}{Double square braces - adaptive}{$\dbr{\VA}$} % maybe use rrbracket-llbracket from stmaryd?
 \scm{\dbrl}{Left double square bracket}{$\dbrl$}
 \scm{\dbrr}{Right double square bracket}{$\dbrr$}
+%
 \subsection{Operators}
 
 % \begin{table}[H]
