Grouped roman numerals

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1129,17 +1129,17 @@
 \newcommand{\sqthreetwo}{{\textstyle\mthin\sqrt{\frac{3}{2}}\mthin}}
 
 % Roman letters
-\newcommand{\Rone}{\UI}
-\newcommand{\Rtwo}{\UI\hspace{-0.1em}\UI}
-\newcommand{\Rthree}{\UI\hspace{-0.1em}\UI\hspace{-0.1em}\UI}
-\newcommand{\Rfour}{\UI\hspace{-0.15em}\UV}
-\newcommand{\Rvarfour}{\UI\hspace{-0.13em}\UI\hspace{-0.13em}\UI\hspace{-0.13em}\UI}
-\newcommand{\Rfive}{\UV}
-\newcommand{\Rsix}{\UV\hspace{-0.15em}\UI}
-\newcommand{\Rseven}{\UV\hspace{-0.15em}\UI\hspace{-0.12em}\UI}
-\newcommand{\Reight}{\UV\hspace{-0.18em}\UI\hspace{-0.15em}\UI\hspace{-0.15em}\UI}
-\newcommand{\Rnine}{\UI\hspace{-0.15em}\UX}
-\newcommand{\Rten}{\UX}
+\newcommand{\Rone}{{\UI}}
+\newcommand{\Rtwo}{{\UI\hspace{-0.1em}\UI}}
+\newcommand{\Rthree}{{\UI\hspace{-0.1em}\UI\hspace{-0.1em}\UI}}
+\newcommand{\Rfour}{{\UI\hspace{-0.15em}\UV}}
+\newcommand{\Rvarfour}{{\UI\hspace{-0.13em}\UI\hspace{-0.13em}\UI\hspace{-0.13em}\UI}}
+\newcommand{\Rfive}{{\UV}}
+\newcommand{\Rsix}{{\UV\hspace{-0.15em}\UI}}
+\newcommand{\Rseven}{{\UV\hspace{-0.15em}\UI\hspace{-0.12em}\UI}}
+\newcommand{\Reight}{{\UV\hspace{-0.18em}\UI\hspace{-0.15em}\UI\hspace{-0.15em}\UI}}
+\newcommand{\Rnine}{{\UI\hspace{-0.15em}\UX}}
+\newcommand{\Rten}{{\UX}}
 
 
 \makeatletter
