--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -314,7 +314,9 @@ for alphabets in which this is possible.
 \scm{\partdd}{Double partial derivative}{$\partdd{a}{b}$}
 \scm{\epartd}{Euler type partial derivative}{$\epartd{a}{b}$}
 \scm{\deriv}{Derivative}{$\deriv{a}{b}$}
-\scm{\derivd}{Double derivative}{$\derivd{a}{b}$}
+\scm{\dderiv}{Double derivative}{$\dderiv{a}{b}$}
+\scm{\Deriv}{Material derivative}{$\Deriv{a}{b}$}
+\scm{\DDeriv}{Double material derivative}{$\DDeriv{a}{b}$}
 \scm{\ederiv}{Euler type derivative}{$\ederiv{a}{b}$}
 %
 \scm{\ddt}{Time derivative}{$\ddt x$}
