Replaced del from upright partial to reflected 6

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -12,6 +12,7 @@
 \usepackage{relsize}
 \usepackage{amsmath}
 \usepackage{tabularx}
+\usepackage{graphicx}
 \usepackage{rotating}
 % \usepackage{unicode-math}
 % \usepackage{upgreek}
@@ -1061,7 +1062,8 @@
 \newcommand{\dif}{\mathsf{d}\mkern 0.8mu}
 \newcommand{\Dif}{\mathsf{D}\mkern 0.8mu}
 
-\newcommand{\del}{\text{\rotatebox[origin=t]{20}{\scalebox{0.95}[1]{$\partial$}}}\mkern -0.7mu}
+% \newcommand{\del}{\text{\rotatebox[origin=t]{20}{\scalebox{0.95}[1]{$\partial$}}}\mkern -0.7mu}
+\newcommand{\del}{\textsf{\reflectbox{6}}\mkern 1.4mu}
 
 % \makeatletter
 % \newif\ifkp@upRm% is used in the .fd-file of jkp
