--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -239,6 +239,20 @@ for alphabets in which this is possible.
 \label{tb:math}
 \end{table}
 
+% \begin{table}[htbp]
+%   \centering
+% \begin{tabular}{p{14em} l l l}
+%   \toprule
+%   Name & \LaTeX{} package & Prefix & Sample \\
+%   \midrule
+%   % Italic capitals letters & none & none & $\SGamma\SDelta\STheta$ \\
+%   \bottomrule
+% \end{tabular}
+% \caption{Guide for symbol prefixes for greek letters.}
+% \label{tb:greek1}
+% \end{table}
+
+
 \section{Operator Macros}
 
 \subsection{Braces}
@@ -306,6 +320,10 @@ for alphabets in which this is possible.
 \scm{\inv}{Inverse}{$\VA\inv$}
 \scm{\invtra}{Invert, transpose}{$\VA\invtra$}
 \scm{\trainv}{Transpose, invert}{$\VA\trainv$}
+\scm{\ovd}{Time derivative, over-dot}{$\ovd{a}$}
+\scm{\ovd}{Double over-dot}{$\ovdd{a}$}
+\scm{\ovd}{Spatial derivative, over-prime}{$\ovp{a}$}
+\scm{\ovd}{Double over-prime}{$\ovpp{a}$}
 \scm{\dif}{Differential operator d}{$\dif a$}
 \scm{\del}{Partial derivative operator}{$\del a$}
 \scm{\var}{Variational operator d}{$\var a$}
