Thickened dot product

--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1111,7 +1111,7 @@
 \newcommand{\sumn}[2]{\sum\nolimits_{#1}^{#2}}
 \newcommand{\dyc}{\otimes}
 \newcommand{\crs}{\times}
-\newcommand{\dtp}{\cdot}
+\newcommand{\dtp}{\mathbin{\LargerCdot}}
 % Special fractions and roots
 % \newcommand{\half}{{\mthin\frac{1}{2}\mthin}}
 % \newcommand{\third}{{\mthin\frac{1}{3}\mthin}}
@@ -1161,13 +1161,14 @@
 
 
 \makeatletter
-\newcommand{\linedot}[1]{\dot{\overline{#1}}}
+\newcommand{\linedot}[1]{\ovd{\overline{#1}}}
 
 % Over-prime
 \newcommand{\ovp}[1]{\overset{\prime}{#1}}
 \newcommand{\ovpp}[1]{\overset{\prime\prime}{#1}}
 
 % Over-dot
+\newcommand*{\LargerCdot}{\raisebox{0.5ex}{\scalebox{0.37}{$\bullet$}}}
 \newcommand*{\LargerDot}{\raisebox{-0.25ex}{\scalebox{0.37}{$\bullet$}}}
 \newcommand*{\ovd}[1]{\overset{\LargerDot}{#1}}
 \newcommand*{\ovdd}[1]{\overset{\LargerDot\mkern .5mu\LargerDot}{#1}}
