--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -1109,7 +1109,7 @@
 \newcommand{\degree}{\ensuremath{^{\circ}}\xspace}
 \newcommand{\suml}[2]{\sum\limits_{#1}^{#2}}
 \newcommand{\sumn}[2]{\sum\nolimits_{#1}^{#2}}
-\newcommand{\dyc}{\otimes}
+\newcommand{\dyd}{\otimes}
 \newcommand{\crs}{\times}
 \newcommand{\dtp}{\mathbin{\LargerCdot}}
 % Special fractions and roots
