--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -351,7 +351,7 @@ for alphabets in which this is possible.
 \scm{\dtp}{Dot product (\texttt{cdot} shortcut)}{$\VA\dtp\VB$}
 \scm{\crs}{Cross product (\texttt{times} shortcut)}{$\VA\crs\VB$}
 \scm{\dcrs}{Double cross product }{$\VA\dcrs\VB$}
-\scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$\VA\dyc\VB$}
+\scm{\dyd}{Dyadic product (\texttt{otimes} shortcut)}{$\VA\dyd\VB$}
 \scm{\linedot}{Time integral with overline}{$\linedot{\UA}$}
 \scm{\DIV}{DIVergence}{$\DIV\VA$}
 \scm{\Div}{Divergence}{$\Div\VA$}
