--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -282,7 +282,7 @@
 \scm{\dtp}{Dot product (\texttt{cdot} shortcut)}{$ A\dtp B$}
 \scm{\crs}{Cross product (\texttt{times} shortcut)}{$ A\crs B$}
 \scm{\dcrs}{Double cross product }{$ A\dcrs B$}
-\scm{\dyc}{Dyadic product (\texttt{otimes} shortcut)}{$ A\dyc B$}
+\scm{\dyd}{Dyadic product (\texttt{otimes} shortcut)}{$ A\dyd B$}
 \scm{\linedot}{Time integral with overline}{$\linedot{A}$}
 \scm{\DIV}{DIVergence}{$\DIV A$}
 \scm{\Div}{Divergence}{$\Div A$}
