Changed difference and transpose symbol to regular d and T

--- a/lazyeqn.tex
+++ b/lazyeqn.tex
@@ -281,7 +281,7 @@
 \scm{\sumn}{Summation made easier, with nolimits}{$\sumn{i=1}{3}$}
 \scm{\dtp}{Dot product (\texttt{cdot} shortcut)}{$ A\dtp B$}
 \scm{\crs}{Cross product (\texttt{times} shortcut)}{$ A\crs B$}
-\scm{\dcrs}{Double cross product }{$ A\dcrs B$}
+% \scm{\dcrs}{Double cross product }{$ A\dcrs B$}
 \scm{\dyd}{Dyadic product (\texttt{otimes} shortcut)}{$ A\dyd B$}
 \scm{\linedot}{Time integral with overline}{$\linedot{A}$}
 \scm{\DIV}{DIVergence}{$\DIV A$}
