--- a/lazyeqn.sty
+++ b/lazyeqn.sty
@@ -68,8 +68,12 @@
    \left[\kern-0.3\wd8\left[#1\right]\kern-0.3\wd8\right]%
 }
 
-\newcommand{\dif}{\mathsf{d}\mkern 0.8mu}
-\newcommand{\Dif}{\mathsf{D}\mkern 0.8mu}
+% \newcommand{\dif}{\mathsf{d}\mkern 0.8mu}
+% \newcommand{\Dif}{\mathsf{D}\mkern 0.8mu}
+
+\newcommand{\dif}{d}
+\newcommand{\Dif}{D}
+
 
 % \newcommand{\del}{\text{\rotatebox[origin=t]{20}{\scalebox{0.95}[1]{$\partial$}}}\mkern -0.7mu}
 % \newcommand{\del}{\textsf{\reflectbox{6}}\mkern 1.4mu}
@@ -86,8 +90,8 @@
 % Mathematical operators
 \newcommand{\vartn}[2]{\frac{\var #1}{\var #2}}
 \newcommand{\partd}[2]{\frac{\del #1}{\del #2}}
-\newcommand{\partdd}[2]{\frac{\del\mkern -1.5mu^2 #1}{\del #2\mkern 1mu ^2}}
-\newcommand{\epartd}[2]{\del\mkern -1mu_{#2}\mkern 1.5mu #1}
+\newcommand{\partdd}[2]{\frac{\del^2 #1}{\del {#2}^2}}
+\newcommand{\epartd}[2]{\del_{#2} #1}
 %
 \newcommand{\ddt}{\frac{\dif}{\dif t}}
 \newcommand{\ddelt}{\frac{\del}{\del t}}
@@ -245,7 +249,8 @@
 \makeatother
 
 % \def\transposesymbol{\top}
-\def\transposesymbol{\raisemath{-0.09ex}{\mathsf{T}}}
+\def\transposesymbol{T}
+% \def\transposesymbol{\raisemath{-0.09ex}{\mathsf{T}}}
 
 \def\tra{^{\transposesymbol}}
 \def\trab#1{^{#1\transposesymbol}}
@@ -354,9 +359,9 @@
 % \temp{}
 
 % double cross product
-\usepackage{stackengine}
-\def\stacktype{L}
-\stackMath
-\def\dcrs{\mathrel{\abovebaseline[-.4ex]{\rotatebox{45}{\stackon[0pt]{%
-\stackon[0pt]{\rule[.15em]{0.6em}{.05em}}{\rule[.4em]{0.6em}{.05em}}%
-}{\rule{.05em}{0.6em}\rule{.23em}{0pt}\rule{.05em}{0.6em}}}}}}
+% \usepackage{stackengine}
+% \def\stacktype{L}
+% \stackMath
+% \def\dcrs{\mathrel{\abovebaseline[-.4ex]{\rotatebox{45}{\stackon[0pt]{%
+% \stackon[0pt]{\rule[.15em]{0.6em}{.05em}}{\rule[.4em]{0.6em}{.05em}}%
+% }{\rule{.05em}{0.6em}\rule{.23em}{0pt}\rule{.05em}{0.6em}}}}}}
